--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
       </video>
       <div class="yarn-animation" aria-hidden="true"></div>
       <div class="container" style="position: relative; z-index: 1;">
-        <div class="hero-content fade-in">
-          <h1 class="hero-title">Climax Hosiery</h1>
-          <p class="hero-tagline">"Crafting Quality, Knitting Success – Since 1980!"</p>
-          <p class="mb-6 text-gray">Third-generation expertise in premium knitted fabrics and garments</p>
+        <div class="hero-content fade-in" style="color: white;">
+          <h1 class="hero-title" style="color: white; -webkit-text-fill-color: white; background: none;">Climax Hosiery</h1>
+          <p class="hero-tagline" style="color: white;">"Crafting Quality, Knitting Success – Since 1980!"</p>
+          <p class="mb-6" style="color: white;">Third-generation expertise in premium knitted fabrics and garments</p>
           <div class="hero-cta">
             <a href="products.html" class="btn btn-primary btn-large">Explore Products</a>
             <a href="contact.html" class="btn btn-outline btn-large">Request Quote</a>
