--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
     </svg>
   </a>
 
+  <script src="./js/video-handler.js"></script>
   <script src="./js/enhanced-main.js"></script>
   <script src="./js/splash-new.js"></script>
 </body>
