--- a/machinery.html
+++ b/machinery.html
@@ -237,6 +237,7 @@
 
   <script src="./js/enhanced-main.js"></script>
 
+  <script src="./js/video-handler.js"></script>
   <!-- Fix: Make videos clickable -->
   <style>
     video.machinery-video {
