--- a/production.html
+++ b/production.html
@@ -267,6 +267,7 @@
     </div>
   </footer>
 
+  <script src="./js/video-handler.js"></script>
   <script src="./js/enhanced-main.js"></script>
   <!-- WhatsApp Floating Button -->
   <a href="https://wa.me/923217798889" target="_blank" rel="noopener noreferrer" class="whatsapp-float" aria-label="Contact us on WhatsApp">
